# mdx

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .markdownlintignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  package-lock.json  package.json
.changeset/: config.json
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  spec_clarification.md
.github/workflows/: ci.yml  release-editor.yml
bindings/rust/: .gitignore  Cargo.toml  README.md
bindings/rust/examples/: parity_dump.rs
bindings/rust/src/: lib.rs
bindings/rust/tests/: archive_integration.rs
browser-extension/: README.md  REPRODUCIBLE_BUILD.md  build.js  manifest.json
browser-extension/background/: service-worker.js
browser-extension/content/: archive-detector.js
browser-extension/icons/: README.md
browser-extension/popup/: popup.html  popup.js
browser-extension/test/: build.test.js  manifest.test.js
browser-extension/viewer/: viewer.css  viewer.html  viewer.js
chrome-extension/: generate-icons.js  manifest.json  setup.js  viewer.css  viewer.html  viewer.js
cli/: README.md  package-lock.json  package.json
cli/src/: index.js
cli/test/: a11y.test.js  extract.test.js  import-epub.test.js  snapshots.test.js  verify.test.js
docs/: COMPETITIVE.md  FUNDING.md  PARTNERSHIPS.md  POSITIONING.md  README.md  SUPPORT_MATRIX.md  format-internals.md  implementation-guide.md  tool-builder-guide.md
docs/decisions/: content-addressing-evolution.md
docs/for-authors/: DOI.md  SUBMITTING.md
docs/for-journals/: EDITORIAL.md
docs/for-reviewers/: REPRODUCING.md
docs/format-internals/: epub-mdz-fidelity.md
docs/governance/: CHARTER.md  README.md  RELEASE_ENGINEERING.md  RFC_PROCESS.md  TRADEMARK.md
docs/proposals/: streaming.md
docs/security/: CSP.md  SIGNATURE_TRUST.md  THREAT_MODEL.md
editor/: index.html
editor-desktop/: README.md  electron-builder.yml  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.main.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
editor-desktop/build-resources/: README.md  entitlements.mac.plist
editor-desktop/e2e/: cell-runner.spec.ts  compare-modals.spec.ts  open-save-roundtrip.spec.ts  picker-modals.spec.ts  smoke.spec.ts
editor-desktop/test/: accessibility-checker.test.ts  annotations-render.test.ts  annotations.test.ts  archive-io.test.ts  asset-store.test.ts  block-diff.test.ts  cell-run-buttons.test.ts  cell-runner.test.ts  diff-render.test.ts  directive-insert.test.ts  directive-pickers.test.ts  editor-pane.test.ts  html-escape.test.ts  ipynb-import.test.ts  kernel-manifest.test.ts  locales.test.ts  python-kernel.test.ts  sync-scroll.test.ts  variant-encoder.test.ts  variant-flow.test.ts  variant-planner.test.ts
examples/: alignment-basic.mdx  alignment-complex.mdx  alignment-directives.mdx  technical-doc.mdx
examples/scientific-paper/: README.md
examples/v2/: comprehensive.mdx
implementations/python/: alignment_parser.py  create_v11_examples.py  create_v20_example.py  mdx_format.py
implementations/typescript/: mdx_format.integration.test.ts  mdx_format.property.test.ts  mdx_format.test.ts  mdx_format.ts  mdx_format.v20.integration.test.ts  package.json  tsconfig.json  vitest.config.ts
integrations/pandoc/: mdz-filter.lua
integrations/vscode/: language-configuration.json  package.json
legacy/: README.md
spec/: MDX_FORMAT_SPECIFICATION.md  MDX_FORMAT_SPECIFICATION_v1.1.md  MDX_FORMAT_SPECIFICATION_v2.0.md  manifest-v2.schema.json  manifest.schema.json
tree-sitter-mdz/: README.md  grammar.js  package.json
viewer/: index.html
(+298 files in other folders)
