[package]
name = "mdz"
version = "0.1.0-alpha.0"
edition = "2021"
description = "Rust bindings for the MDZ (Markdown Zipped Container) format — a single-file container for executable scientific papers."
license = "MIT"
repository = "https://github.com/danielsimonjr/mdx"
keywords = ["mdz", "mdx", "markdown", "scientific", "archive"]
categories = ["parser-implementations", "science"]
readme = "README.md"
rust-version = "1.85"

[lib]
name = "mdz"
path = "src/lib.rs"

[dependencies]
# ZIP handling — zip crate is the de facto standard, async-safe variant.
zip = { version = "2.2", default-features = false, features = ["deflate"] }
# JSON manifest parsing via serde.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Structured error handling.
thiserror = "1.0"
# Integrity crates — ONLY pulled when the `verify` feature is active, so
# a downstream that disables default-features truly sheds these deps.
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
# blake3 is the v2.0 spec's third accepted content-hash algorithm
# (alongside sha256 + sha512). No_std support has been stable for
# several releases; gated under the same `verify` feature.
blake3 = { version = "1.5", optional = true, default-features = false }

[dev-dependencies]
# Test-only: example generation + roundtrip fixtures.
tempfile = "3"
# Test-only: synthesize ZIP archives for integration tests. The main
# crate consumes ZIPs in read-only mode; the writer API is test-only.
zip = { version = "2.2", default-features = false, features = ["deflate"] }
# Test-only: integration tests compute expected chain hashes. These are
# dev-deps (not main deps) because the main crate gates sha2/hex behind
# the `verify` feature; dev-deps are independent of feature resolution
# and available in tests regardless of which feature set is active.
sha2 = "0.10"
hex = "0.4"
blake3 = { version = "1.5", default-features = false }

[features]
default = ["verify"]
# Integrity + content_hash + signature-chain checks. Gates both the
# methods and their crypto dependencies.
verify = ["dep:sha2", "dep:hex", "dep:blake3"]
